--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,7 @@ services:
 
     App\Command\ChargingCommand:
         $apiUrl: '%env(TELSA_API_URL)%'
+        $vehicleId: '%env(VEHICLE_ID)%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
